# storymap-gen

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: fitness-coaching.json  music-school.json  volunteer-coordination.json
src/storymapgen/: __init__.py  ascii_renderer.py  cli.py  html_renderer.py  markdown_renderer.py  models.py
tests/: test_smoke.py
